# jText

./: .gitignore  CMakeLists.txt  README.md  SPEC.md  TODO.md  Workshop_Inventory_Test_001.jtext  jText.cpp  jText.h  jTextValidator.cpp  jTextValidator.h  main.cpp  run-tests.sh
Rationale/: 01_No_Preprocessor_Macros_Policy.md  02_Cpp23_Modernization_and_No_Macros.md
ai_bank/: project_state.md
samples/light_profile/: run_manifest.jtext
samples/workshop_from_db/: workshop_from_db.jschma  workshop_from_db.jtFlds  workshop_from_db.jtext  workshop_from_db.jtinsrt
samples/workshop_tools/: workshop_tools.jtFull
src/: .gitkeep  CMakeLists.txt
src/parser/: line.cpp  section.cpp  section.hpp
src/tool/: jtext_process.cpp  jtext_retrieve.cpp
src/validator/: validator.cpp  validator.hpp
tests/: CMakeLists.txt  parser_validator_test.cpp  test_smoke.cpp
tests/framework/: CMakeLists.txt  README.md  assertion.hpp  concepts.hpp  format_value.hpp  reporter.cpp  reporter.hpp  runner.cpp  runner.hpp  type_name.hpp
tests/manual/: CMakeLists.txt  main.cpp
tests/manual/categories/: meta_basic.hpp  parser_basic.hpp  section_basic.hpp  validator_basic.hpp
tmp/: retrieve_descriptor.sql  test_005_limited_floats.jtext  test_005_limited_ints.jtext  test_005_limited_main.jtext  workshop_tools.sql
tools/: CMakeLists.txt  jtext_from_sql.cpp  jtext_xtox_sql.cpp
tools/tests/: test_xtox_sql.cmake
v001/: CMakeLists.txt  jText.api.inc  jText.cpp  jText.h  jText.impl.inc
v001/examples/: CMakeLists.txt  v001_example.cpp
v001/include/jText/: v001.hpp
v001/modules/: jText.v001.core.cppm  jText.v001.cppm  jText.v001.importstd.cppm  jText.v001.importstd.impl.cpp  jText.v001.reader.cppm  jText.v001.writer.cppm
v001/tests/: CMakeLists.txt  v001_test.cpp
v001/tests/module/: CMakeLists.txt  v001_module_test.cpp
v001/tools/: CMakeLists.txt
v001/tools/tests/: test_from_sql_args.cmake
v001/tools/tests/fixtures/escape/: escape.jtFull
v002/: CMakeLists.txt  jText.api.inc  jText.cpp  jText.h  jText.impl.inc
v002/examples/: CMakeLists.txt  v002_example.cpp
v002/include/jText/: v002.hpp
v002/modules/: jText.v002.core.cppm  jText.v002.cppm  jText.v002.importstd.cppm  jText.v002.importstd.impl.cpp  jText.v002.reader.cppm  jText.v002.writer.cppm
v002/tests/: CMakeLists.txt  v002_test.cpp
v002/tests/module/: CMakeLists.txt  v002_module_test.cpp
v002/tools/: CMakeLists.txt
v002/tools/tests/: test_from_sql_injection.cmake  test_xtox_escape.cmake
v002/tools/tests/fixtures/sample/: sample.jtFull
